--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -163,7 +163,7 @@
 
     </div>
     <div class="signup">
-      <p><a (click)="registrar(user.value,pass.value)" type="submit">Registrarse</a></p>
+      <p><a (click)="registrar(user.value,pass.value)" >Registrarse</a></p>
     </div>
 
     <!-- captcha -->
